updated website link

--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://robofriends-eosin.vercel.app/"
+                  href="https://fmsarp.github.io/robofriends/"
                 >
                   See Live
                 </a>
